@@ -1,4 +1,4 @@
-CoCo2_20250127 - 001 RC1
+CoCo2_20250205 - 002 RC4
 1:	Recursion testing spreadsheet completed.
 2:	Updated MiSTer template
 3:	Added Daily Build Number.  Note sys/build_num.tcl changed to add this functionality.
@@ -13,7 +13,8 @@ CoCo2_20250127 - 001 RC1
 9:	Added Cassette Save
 10: Added minor delay to 1793 interrupt to fix dragon os9 problem.  Also removed HALT from
     dragon FDC.
+11: Nitro OS9 working on CoCo, loading on Dragon64.  Known issues with multi-drive dragon Nitro systems. WIP.
 
 To Do...
-1:  Get Nitro OS9 working
+1:  Fix Dragon multi-drive NitrOS9 issues
 
